--- a/pb_tool.cfg
+++ b/pb_tool.cfg
@@ -1,5 +1,5 @@
 #/***************************************************************************
-# Senspace
+# Senscape
 #
 # Configuration file for plugin builder tool (pb_tool)
 #                            -------------------
@@ -38,11 +38,11 @@
 [plugin]
 # Name of the plugin. This is the name of the directory that will
 # be created in .qgis2/python/plugins
-name: Senspace
+name: Senscape
 
 [files]
 # Python  files that should be deployed with the plugin
-python_files: __init__.py senspace.py 
+python_files: __init__.py senscape.py 
 
 # The main dialog file that is loaded (not compiled)
 main_dialog: 
